myapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  labels:
    env: demo-env
    app: myapp
spec:
  selector:
    matchLabels:
      env: demo-env
      app: myapp
  replicas: 1
  template:
    metadata:
      labels:
        env: demo-env
        app: myapp
    spec:
      containers:
      - image: ACCT#.dkr.ecr.us-east-2.amazonaws.com/myapp:1.0
        imagePullPolicy: Always
        name: myapp
        resources:
          requests:
            memory: "1024Mi"
            cpu: "1000m"
          limits:
            memory: "2048Mi"
            cpu: "2000m"
        ports:
        - containerPort: 80
